# discontinuum

./: .buildinfo  .gitignore  .swp  DISCLAIMER.md  MONOTONIC_PENALTY_VERIFICATION.md  README.md  README.md.bak  Untitled.ipynb  api_reference.html  code.json  debug_mean.py  genindex.html  getting_started.html  index.html  loadest-gp-demo.ipynb  objects.inv  py-modindex.html  pyproject.toml  scratch-check.ipynb  search.html  searchindex.js  test_checkpoint.pkl  test_checkpoint_load.pkl  test_final_checkpoint.pkl  test_syntax_check.py  verify_gp_mean.py
.devtoolsets/: dev.toolsets.jsonc
.doctrees/: api_reference.doctree  environment.pickle  getting_started.doctree  index.doctree
.doctrees/_autosummary/: discontinuum.data_manager.doctree  discontinuum.doctree  discontinuum.engines.base.doctree  discontinuum.engines.doctree  discontinuum.engines.gpytorch.doctree  discontinuum.engines.pymc.doctree  discontinuum.pipeline.doctree  discontinuum.plot.doctree  discontinuum.providers.base.doctree  discontinuum.providers.doctree  discontinuum.utils.doctree  loadest_gp.doctree  loadest_gp.models.base.doctree  loadest_gp.models.doctree  loadest_gp.models.gpytorch.doctree  loadest_gp.models.pymc.doctree  loadest_gp.plot.doctree  loadest_gp.providers.doctree  loadest_gp.providers.usgs.doctree  loadest_gp.utils.doctree  rating_gp.doctree  rating_gp.models.base.doctree  rating_gp.models.doctree  rating_gp.models.gpytorch.doctree  rating_gp.models.kernels.doctree  rating_gp.pipeline.doctree  rating_gp.plot.doctree  rating_gp.providers.doctree  rating_gp.providers.usgs.doctree
.doctrees/notebooks/: loadest-gp-demo.doctree  rating-gp-demo.doctree
.github/chatmodes/: test_chatmode.chatmode.md
.github/instructions/: dev.instructions.md
.github/workflows/: deploy-docs.yml  python-package.yml
_autosummary/: discontinuum.data_manager.html  discontinuum.engines.base.html  discontinuum.engines.gpytorch.html  discontinuum.engines.html  discontinuum.engines.pymc.html  discontinuum.html  discontinuum.pipeline.html  discontinuum.plot.html  discontinuum.providers.base.html  discontinuum.providers.html  discontinuum.utils.html  loadest_gp.html  loadest_gp.models.base.html  loadest_gp.models.gpytorch.html  loadest_gp.models.html  loadest_gp.models.pymc.html  loadest_gp.plot.html  loadest_gp.providers.html  loadest_gp.providers.usgs.html  loadest_gp.utils.html  rating_gp.html  rating_gp.models.base.html  rating_gp.models.gpytorch.html  rating_gp.models.html  rating_gp.models.kernels.html  rating_gp.pipeline.html  rating_gp.plot.html  rating_gp.providers.html  rating_gp.providers.usgs.html
_sources/: getting_started.md
_sources/_autosummary/: discontinuum.data_manager.rst  discontinuum.engines.base.rst  discontinuum.engines.gpytorch.rst  discontinuum.engines.pymc.rst  discontinuum.engines.rst  discontinuum.pipeline.rst  discontinuum.plot.rst  discontinuum.providers.base.rst  discontinuum.providers.rst  discontinuum.rst  discontinuum.utils.rst  loadest_gp.models.base.rst  loadest_gp.models.gpytorch.rst  loadest_gp.models.pymc.rst  loadest_gp.models.rst  loadest_gp.plot.rst  loadest_gp.providers.rst  loadest_gp.providers.usgs.rst  loadest_gp.rst  loadest_gp.utils.rst  rating_gp.models.base.rst  rating_gp.models.gpytorch.rst  rating_gp.models.kernels.rst  rating_gp.models.rst  rating_gp.pipeline.rst  rating_gp.plot.rst  rating_gp.providers.rst  rating_gp.providers.usgs.rst  rating_gp.rst
_sources/notebooks/: loadest-gp-demo.ipynb  rating-gp-demo.ipynb
_static/: documentation_options.js
discontinuum/: data_manager.py  pipeline.py  transform.py  util.py  utils.py
discontinuum/engines/: base.py  pymc.py
discontinuum/models/: __init__.py  base.py
discontinuum/providers/: base.py  usgs.py
discontinuum/tests/: test_pipeline.py  test_transform.py
docs/: _config.yml  api.rst  requirements.txt
docs/source/: api_reference.rst  conf.py  getting_started.md  index.md
examples/nawqa-loadest-example/: README.md  nawqa-data-pull.py  nawqa-loadest-example.py  requirements.txt  retrieve_nawqa_with_lithops.py
examples/nwqn-loadest-example/: Dockerfile_discontinuum  NWQN_sites.csv  (+4 more)
loadest2/: plot.py  transform.py  utils.py
notebooks/: !best-demo.ipynb  00-navigating-nwis.ipynb  01-navigating-wqp.ipynb  Untitled.ipynb  Untitled1.ipynb  counterfactual.ipynb  illinois-river-counterfactual.ipynb  illinois-river.ipynb  loadest-demo-Copy1.ipynb  loadest-demo-contourf.ipynb  loadest-demo.ipynb  loadest-gp-demo-Copy1.ipynb  loadest-gp-demo-latent.ipynb  loadest-gp-demo-latent2.ipynb  loadest-gp-demo.html  loadest-gp-demo.ipynb  loadest-gpytorch-illinois.ipynb  loadest-gpytorch.ipynb  rating-gp-demo.html  rating-gp-demo.ipynb  wrtds-demo-Copy1.ipynb  wrtds-demo.ipynb
tests/: test_gaussian_process_noise.py  test_loadest_gp.py  test_orthogonal_rff_noise.py  test_rating_gp.py
(+50 files in other folders)
