[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "discontinuum"
description = "Estimate discontinuous timeseries from continuous covariates."
readme = "README.md"
requires-python = ">=3.9"
keywords = ["timeseries", "Gaussian processes", "discontinuous"]
license = {file = "LICENSE.md"}
maintainers = [
  {name = "Timothy Hodson", email = "thodson@usgs.gov"},
]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "pymc >= 5.0.0",
    "xarray",
]

dynamic = ["version"]

[tool.setuptools]
packages = ["discontinuum","discontinuum.providers","discontinuum.models", "discontinuum.tests"]

[project.optional-dependencies]
test = [
  "flake8",
  "ruff",
  "pytest > 5.0.0",
  "pytest-cov[all]",
]

loadest_gp = [
  "dataretrieval",
]

doc = [
  "sphinx",
  "sphinx-rtd-theme",
  "nbsphinx",
  "ipython",
  "ipykernel",
]

[project.urls]
homepage = "https://github.com/thodson-usgs/discontinuum"
repository = "https://github.com/thodson-usgs/discontinuum.git"

[tool.setuptools_scm]
write_to = "discontinuum/_version.py"

[tool.ruff]
line-length = 127 # 79

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 72

[tool.ruff.lint]
# Default ["E4", "E7", "E9", and "F"] --> Pyflakes ("F") and pycodestyle ("E")
extend-select = ["B", "E501", "I", "Q", "E303", "W293", "W291"]
